# frames-rs

./: .clippy.toml  Cargo.toml  README.md
.github/workflows/: ci.yml
frames-core/: Cargo.toml  README.md
frames-core/src/: address.rs  frame.rs  lib.rs
frames-core/src/provider/: farcaster.rs  mod.rs
frames-core/src/serializers/: button.rs  frame.rs  image.rs  mod.rs
frames-core/src/types/: button.rs  errors.rs  external.rs  frame.rs  image.rs  mod.rs
frames-core/src/validators/: button.rs  frame.rs  image.rs  mod.rs
frames-core/tests/: address.rs  frame.rs  main.rs  provider.rs
