[package]
name = "frames-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.13"
scraper = "0.18.1"
serde = { version = '1.0', features = ['derive'] }
serde_json = '1.0'
tokio = { version = "1.0", features = ["full"] }


[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
